# rust-auth-api

./: .gitignore  Cargo.toml
config/: development.toml  example.toml
src/: main.rs  settings.rs
src/dbs/: mongo.rs
src/models/: account.rs  mod.rs  user.rs
src/repositories/: account.rs  mod.rs
src/services/: account.rs
