[package]
name = "rust-auth-api"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.8.0", features = ["attributes"] }

serde = { version = "1.0", features = ["derive"] }
mongodb = { version="2.0.0-beta.2", default-features=false, features=["async-std-runtime"] }
jsonwebtoken = "7.2.0"
config = "0.11"
lazy_static = "1.4.0"
futures = "0.3"